# OpenGL-Demo

./: .gitmodules  CMakeLists.txt  README.md
include/: pch.h
include/app/: application.h  log.h
include/core/: application.h  imgui_window.h  log.h
include/ui/component/: log_window.h
include/ui/view/: main_window.h
src/: main.cpp
src/app/: application.cpp  log.cpp
src/core/: application.cpp  log.cpp
src/ui/component/: log_window.cpp
src/ui/view/: main_window.cpp
